<!--

    Copyright (C) 2010 Julien SMADJA <julien.smadja@gmail.com>

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.fluxx</groupId>
    <artifactId>fluxx</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <name>fluxx</name>
    <description>Root pom.xml for all fluxx projects</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments />
    </license>
  </licenses>

<developers>
<developer>
<id>jsmadja</id>
      <name>Julien Smadja</name>
      <email>julien.smadja@gmail.com</email>
</developer>
</developers>

    <modules>
        <module>fluxx-core</module>
        <module>fluxx-web</module>
	<module>fluxx-admin</module>
	<module>fluxx-integration-test</module>
	<module>fluxx-ear</module>
    </modules>

    <properties>
        <junit-version>4.7</junit-version>
        <eclipselink-version>2.0.1</eclipselink-version>
	<javax-persistence-version>2.0.0</javax-persistence-version>
        <glassfish-version>3.1-b37</glassfish-version>
        <sl4j-version>1.5.6</sl4j-version>
        <rome-version>0.9</rome-version>
        <commons-lang-version>2.3</commons-lang-version>
        <eh-cache-version>2.3.0</eh-cache-version>
        <hibernate-validator-version>4.0.2.GA</hibernate-validator-version>
        <javaee-version>6.0</javaee-version>
        <jdom-version>1.0</jdom-version>
        <mockito-version>1.8.5</mockito-version>
        <jsf-version>2.0.2-b10</jsf-version>
    </properties>

   <repositories>
<repository>
	<id>fluxx</id>
	<name>fluxx repository</name>
	<url>http://fluxx.fr.cr:9080/nexus/content/groups/public/</url>
</repository>
        <repository>
            <id>glassfish-maven-repository.dev.java.net</id>
            <name>GlassFish Maven Repository</name>
            <url>http://download.java.net/maven/glassfish</url>
        </repository>
        <repository>
            <id>EclipseLink Repo</id>
            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>
            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>
        </repository>
        <repository>
            <id>Maven2</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Maven2</name>
        </repository>
        <repository>
            <id>Maven2 Repo 2</id>
            <url>http://repo2.maven.org/maven2</url>
            <name>Maven2 Repo 2</name>
        </repository>
        <repository>
            <id>JBoss</id>
            <url>http://repository.jboss.com/maven2</url>
            <name>JBoss</name>
        </repository>
        <repository>
            <id>Java</id>
            <url>http://download.java.net/maven/2/</url>
            <name>Java</name>
        </repository>
        <repository>
            <id>sourceforge</id>
            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>

<plugin>
        <groupId>com.mycila.maven-license-plugin</groupId>
        <artifactId>maven-license-plugin</artifactId>
	<version>1.8.0</version>
        <configuration>
            <header>build-tools/licence.txt</header>
            <strictCheck>true</strictCheck>
            <useDefaultExcludes>false</useDefaultExcludes>
            <excludes>
                <exclude>.gitignore</exclude>
                <exclude>.git/**</exclude>
                <exclude>target/**</exclude>
                <exclude>.settings/**</exclude>
                <exclude>.project</exclude>
                <exclude>.classpath</exclude>
                <exclude>LICENCE</exclude>
                <exclude>README</exclude>
                <exclude>**/MANIFEST.MF</exclude>
		<exclude>sun-appserv-samples/**</exclude>
		<exclude>derby.log</exclude>
		<exclude>src/main/webapp/WEB-INF/lib/**</exclude>
		<exclude>src/main/webapp/WEB-INF/classes/**</exclude>
		<exclude>src/main/webapp/myimages/**</exclude>
		<exclude>src/main/webapp/images/**</exclude>
		<exclude>.externalToolBuilders/**</exclude>
		<exclude>.pmd/**</exclude>
          </excludes>
        </configuration>
     </plugin>



<plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-eclipse-plugin</artifactId>
<version>2.8</version>
 <configuration>
<!--<buildOutputDirectory>${project.basedir}/bin</buildOutputDirectory>-->
</configuration>
</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
		<version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>	
